--- a/Module7_Nutta_Submission.ipynb
+++ b/Module7_Nutta_Submission.ipynb
@@ -15,6 +15,16 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Module 7: Deep learning – Neural Networks\n",
+        "#### Nutta Sittirash"
+      ],
+      "metadata": {
+        "id": "ZtBvl33AiQY4"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
@@ -1211,11 +1221,11 @@
         "model_3.summary()"
       ],
       "metadata": {
-        "id": "-7ezt8Nuc6u2",
-        "outputId": "29d33faf-9d8c-42a3-9890-ed8341647bbf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-7ezt8Nuc6u2",
+        "outputId": "29d33faf-9d8c-42a3-9890-ed8341647bbf"
       },
       "execution_count": 278,
       "outputs": [
@@ -1320,12 +1330,12 @@
         "  plt.show()"
       ],
       "metadata": {
-        "id": "JBScbfjYc63c",
-        "outputId": "dfede4ef-a07f-41b1-bb78-4cb08ac0cf8d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "JBScbfjYc63c",
+        "outputId": "dfede4ef-a07f-41b1-bb78-4cb08ac0cf8d"
       },
       "execution_count": 279,
       "outputs": [
@@ -1707,11 +1717,11 @@
         "model_3.summary()"
       ],
       "metadata": {
-        "id": "WXO3SV70Xo07",
-        "outputId": "4e94548b-3eb7-4674-f393-0fd24aabdeba",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "WXO3SV70Xo07",
+        "outputId": "4e94548b-3eb7-4674-f393-0fd24aabdeba"
       },
       "execution_count": 284,
       "outputs": [
@@ -1818,12 +1828,12 @@
         "  plt.show()"
       ],
       "metadata": {
-        "id": "GoK43-uZXr-O",
-        "outputId": "3c2caa49-db13-48d4-b20f-ba5a1a9901bf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "GoK43-uZXr-O",
+        "outputId": "3c2caa49-db13-48d4-b20f-ba5a1a9901bf"
       },
       "execution_count": 285,
       "outputs": [
